src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-to-mp3-ms-gateway
spec:
  selector:
    app: video-to-mp3-ms-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
